# ttl3

./: CMakeLists.txt  CMakePresets.json  LICENSE
include/old/: Index.hpp  ScalarIndex.hpp  TensorIndex.hpp  assign.hpp  expressions.hpp  ttl.hpp
include/old/concepts/: expression.hpp  extents.hpp  non_scalar.hpp  static_extents.hpp  tensor_index.hpp
include/old/cpos/: evaluate.hpp
include/old/expressions/: Bind.hpp  Product.hpp  Sum.hpp
include/old/traits/: outer.hpp  scalar_type.hpp
include/old/utils/: nttp_args.hpp  ops.hpp  sequence.hpp  type_args.hpp
include/ttl/: Bind.hpp  Bindable.hpp  Index.hpp  ScalarIndex.hpp  TensorIndex.hpp  array.hpp  assign.hpp  bind.hpp  bindable.hpp  carry_sum_add.hpp  delta.hpp  evaluate.hpp  expression_traits.hpp  expressions.hpp  get.hpp  index.hpp  map_extents.hpp  operators.hpp  product.hpp  scalar_index.hpp  sum.hpp  tag_invoke.hpp  tensor_index.hpp  tensor_traits.hpp  traits.hpp  ttl.hpp  typed_index.hpp  utils.hpp
include/ttl/concepts/: bind_expression.hpp  bindable.hpp  expression.hpp  index.hpp  non_scalar.hpp  scalar.hpp  scalar_index.hpp  shape.hpp  static_extents.hpp  tensor.hpp  tensor_index.hpp
include/ttl/cpos/: dim.hpp  evaluate.hpp  extent.hpp
include/ttl/expressions/: Addition.hpp  Binary.hpp  Bind.hpp  Multiplication.hpp  Product.hpp  Subtraction.hpp  Sum.hpp  bind.hpp
include/ttl/traits/: extent.hpp  extents.hpp  order.hpp  outer.hpp  tensor.hpp  value_type.hpp
include/ttl/utils/: FWD.hpp  error.hpp  expect.hpp  ops.hpp
simplify/: CMakeLists.txt  CMakePresets.json  array.hpp  bind.hpp  bindable.hpp  expression_traits.hpp  operators.hpp  product.hpp  scalar_index.hpp  sum.hpp  tensor_index.hpp  tensor_traits.hpp  test.cpp  typed_index.hpp  utils.hpp
tests/: CMakeLists.txt  Tensor.hpp  bind.cpp  common.hpp  dynamic_tensor.cpp  dynamic_tensor.hpp  expressions.cpp  md_array.hpp  md_base.hpp  md_vector.hpp  product.cpp  row_major.hpp  static_tensor.cpp  static_tensor.hpp  sum.cpp  tensor.cpp  test.cpp
