add_executable(test test.cpp)
target_link_libraries(test PRIVATE ttl_lib)

# add_executable(static_tensor static_tensor.cpp)
# target_link_libraries(static_tensor PRIVATE ttl_lib)

# add_executable(dynamic_tensor dynamic_tensor.cpp)
# target_link_libraries(dynamic_tensor PRIVATE ttl_lib)

# add_executable(bind bind.cpp)
# target_link_libraries(bind PRIVATE ttl_lib)

# add_executable(expressions expressions.cpp)
# target_link_libraries(expressions PRIVATE ttl_lib)
